# receipt_scanner

./: .gitignore  CLAUDE.md  README.md  app.py  backup.sh  initialize_classification_feature.py  main.py  pyproject.toml
components/: input.py  product_classification.py  product_db_ops.py  product_grid.py
db/: database.py
models/: product.py  receipt.py  tax.py
pages/: biokontrolle.py  kaeseinnahmen.py  kalkül.py  product_extractor.py  product_reference.py  products.py  receipt_detail.py  sortiment.py  statistik.py  statistik_kaese.py  statistik_overview.py  upload copy.py  upload.py  utils.py  view_receipts.py
receipt_parser/: llm.py  taxation.py
repository/: receipt_repository.py
scripts/: backfill_tax_summary.py  cleanup_orphaned_products.py  fix_products_table.py  update_schema.py
