[project]
name = "receipt-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.66.3",
    "pdf2image>=1.17.0",
    "pillow-heif>=0.22.0",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.47.1",
    "streamlit-pdf-viewer>=0.0.21",
    "xlsxwriter>=3.2.9",
]
